--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "bs58": "^4.0.1",
+    "node-libs-react-native": "^1.0.3",
     "react": "16.8.6",
-    "react-native": "0.60.0"
+    "react-native": "0.60.0",
+    "react-native-randombytes": "^3.5.3",
+    "vm-browserify": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
