--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@polkadot/api": "^0.81.1",
+    "@polkadot/keyring": "^0.93.1",
     "bs58": "^4.0.1",
     "node-libs-react-native": "^1.0.3",
     "react": "16.8.6",
