can now create extrinsics, uses ed25519 instead for now

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "16.8.6",
     "react-native": "0.60.0",
     "react-native-randombytes": "^3.5.3",
-    "vm-browserify": "^1.1.0"
+    "vm-browserify": "^1.1.0",
+    "webassemblyjs": "^1.8.5"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
